add session auth
